@@ -38,6 +38,7 @@
 			<folder>sql</folder>
 			<folder>Controller</folder>
 			<folder>Dispatcher</folder>
+			<folder>fields</folder>
 			<folder>Model</folder>
 			<folder>tmpl</folder>
 			<folder>View</folder>
