@@ -4,78 +4,91 @@
   ~ @copyright  Copyright (c)2013-2021 Nicholas K. Dionysopoulos / Akeeba Ltd
   ~ @license    GNU General Public License version 3 or later
   -->
-<config>
-	<fieldset name="layout" label="COM_CONTACTUS_CONFIG_LAYOUT_TITLE">
-		<field name="akismet_api_key" type="text" default="" size="50"
-			   label="COM_CONTACTUS_CONFIG_AKISMET_API_KEY_LABEL"
-			   description="COM_CONTACTUS_CONFIG_AKISMET_API_KEY_DESC"
-			   class="input-xxlarge"/>
+<config addfieldpath="/administrator/components/com_contactus/fields">
+    <fieldset name="layout" label="COM_CONTACTUS_CONFIG_LAYOUT_TITLE">
+        <field name="akismet_api_key"
+               type="text"
+               default=""
+               size="50"
+               label="COM_CONTACTUS_CONFIG_AKISMET_API_KEY_LABEL"
+               description="COM_CONTACTUS_CONFIG_AKISMET_API_KEY_DESC"
+               class="input-xxlarge"/>
 
-		<field name="privacypolicy"
-			   type="url"
-			   label="COM_CONTACTUS_CONFIG_PRIVACYPOLICY_LABEL"
-			   description="COM_CONTACTUS_CONFIG_PRIVACYPOLICY_DESC"
-			   class="input-xxlarge" />
+        <field name="privacypolicy"
+               type="url"
+               label="COM_CONTACTUS_CONFIG_PRIVACYPOLICY_LABEL"
+               description="COM_CONTACTUS_CONFIG_PRIVACYPOLICY_DESC"
+               class="input-xxlarge"/>
 
-		<field name="load_fef" type="list" default="3"
-			   label="COM_CONTACTUS_CONFIG_LAYOUT_LOAD_FEF"
-			   description="COM_CONTACTUS_CONFIG_LAYOUT_LOAD_FEF_DESC">
-			<option value="0">COM_CONTACTUS_CONFIG_LAYOUT_LOAD_FEF_NEVER</option>
-			<option value="1">COM_CONTACTUS_CONFIG_LAYOUT_LOAD_FEF_FRONTEND</option>
-			<option value="2">COM_CONTACTUS_CONFIG_LAYOUT_LOAD_FEF_BACKEND</option>
-			<option value="3">COM_CONTACTUS_CONFIG_LAYOUT_LOAD_FEF_BOTH</option>
-		</field>
+        <field name="load_fef"
+               type="list"
+               default="3"
+               label="COM_CONTACTUS_CONFIG_LAYOUT_LOAD_FEF"
+               description="COM_CONTACTUS_CONFIG_LAYOUT_LOAD_FEF_DESC">
+            <option value="0">COM_CONTACTUS_CONFIG_LAYOUT_LOAD_FEF_NEVER</option>
+            <option value="1">COM_CONTACTUS_CONFIG_LAYOUT_LOAD_FEF_FRONTEND</option>
+            <option value="2">COM_CONTACTUS_CONFIG_LAYOUT_LOAD_FEF_BACKEND</option>
+            <option value="3">COM_CONTACTUS_CONFIG_LAYOUT_LOAD_FEF_BOTH</option>
+        </field>
 
-		<field name="load_fef" type="list" default="3"
-			   label="COM_CONTACTUS_CONFIG_BACKEND_LOAD_FEF"
-			   description="COM_CONTACTUS_CONFIG_BACKEND_LOAD_FEF_DESC">
-			<option value="0">COM_CONTACTUS_CONFIG_BACKEND_LOAD_FEF_NEVER</option>
-			<option value="1">COM_CONTACTUS_CONFIG_BACKEND_LOAD_FEF_FRONTEND</option>
-			<option value="2">COM_CONTACTUS_CONFIG_BACKEND_LOAD_FEF_BACKEND</option>
-			<option value="3">COM_CONTACTUS_CONFIG_BACKEND_LOAD_FEF_BOTH</option>
-		</field>
+        <field name="load_fef"
+               type="list"
+               default="3"
+               label="COM_CONTACTUS_CONFIG_BACKEND_LOAD_FEF"
+               description="COM_CONTACTUS_CONFIG_BACKEND_LOAD_FEF_DESC">
+            <option value="0">COM_CONTACTUS_CONFIG_BACKEND_LOAD_FEF_NEVER</option>
+            <option value="1">COM_CONTACTUS_CONFIG_BACKEND_LOAD_FEF_FRONTEND</option>
+            <option value="2">COM_CONTACTUS_CONFIG_BACKEND_LOAD_FEF_BACKEND</option>
+            <option value="3">COM_CONTACTUS_CONFIG_BACKEND_LOAD_FEF_BOTH</option>
+        </field>
 
-		<field name="fef_reset" type="list" default="3"
-			   label="COM_CONTACTUS_CONFIG_BACKEND_FEF_RESET"
-			   description="COM_CONTACTUS_CONFIG_BACKEND_FEF_RESET_DESC">
-			<option value="0">COM_CONTACTUS_CONFIG_BACKEND_LOAD_FEF_NEVER</option>
-			<option value="1">COM_CONTACTUS_CONFIG_BACKEND_LOAD_FEF_FRONTEND</option>
-			<option value="2">COM_CONTACTUS_CONFIG_BACKEND_LOAD_FEF_BACKEND</option>
-			<option value="3">COM_CONTACTUS_CONFIG_BACKEND_LOAD_FEF_BOTH</option>
-		</field>
+        <field name="fef_reset"
+               type="list"
+               default="3"
+               label="COM_CONTACTUS_CONFIG_BACKEND_FEF_RESET"
+               description="COM_CONTACTUS_CONFIG_BACKEND_FEF_RESET_DESC">
+            <option value="0">COM_CONTACTUS_CONFIG_BACKEND_LOAD_FEF_NEVER</option>
+            <option value="1">COM_CONTACTUS_CONFIG_BACKEND_LOAD_FEF_FRONTEND</option>
+            <option value="2">COM_CONTACTUS_CONFIG_BACKEND_LOAD_FEF_BACKEND</option>
+            <option value="3">COM_CONTACTUS_CONFIG_BACKEND_LOAD_FEF_BOTH</option>
+        </field>
 
-		<field name="dark_mode_backend" type="radio" default="-1"
-			   label="COM_CONTACTUS_CONFIG_BACKEND_DARKMODE_BACKEND_LABEL"
-			   description="COM_CONTACTUS_CONFIG_BACKEND_DARKMODE_BACKEND_DESC"
-			   class="switcher btn-group">
-			<option value="-1">COM_CONTACTUS_CONFIG_BACKEND_DARKMODE_AUTO</option>
-			<option value="0">COM_CONTACTUS_CONFIG_BACKEND_DARKMODE_NEVER</option>
-			<option value="1">COM_CONTACTUS_CONFIG_BACKEND_DARKMODE_ALWAYS</option>
-		</field>
+        <field name="dark_mode_backend"
+               type="list"
+               default="-1"
+               label="COM_CONTACTUS_CONFIG_BACKEND_DARKMODE_BACKEND_LABEL"
+               description="COM_CONTACTUS_CONFIG_BACKEND_DARKMODE_BACKEND_DESC"
+        >
+            <option value="-1">COM_CONTACTUS_CONFIG_BACKEND_DARKMODE_AUTO</option>
+            <option value="0">COM_CONTACTUS_CONFIG_BACKEND_DARKMODE_NEVER</option>
+            <option value="1">COM_CONTACTUS_CONFIG_BACKEND_DARKMODE_ALWAYS</option>
+        </field>
 
-		<field name="dark_mode_frontend" type="radio" default="-1"
-			   label="COM_CONTACTUS_CONFIG_BACKEND_DARKMODE_FRONTEND_LABEL"
-			   description="COM_CONTACTUS_CONFIG_BACKEND_DARKMODE_FRONTEND_DESC"
-			   class="switcher btn-group">
-			<option value="-1">COM_CONTACTUS_CONFIG_BACKEND_DARKMODE_AUTO</option>
-			<option value="0">COM_CONTACTUS_CONFIG_BACKEND_DARKMODE_NEVER</option>
-			<option value="1">COM_CONTACTUS_CONFIG_BACKEND_DARKMODE_ALWAYS</option>
-		</field>
-	</fieldset>
+        <field name="dark_mode_frontend"
+               type="list"
+               default="-1"
+               label="COM_CONTACTUS_CONFIG_BACKEND_DARKMODE_FRONTEND_LABEL"
+               description="COM_CONTACTUS_CONFIG_BACKEND_DARKMODE_FRONTEND_DESC"
+        >
+            <option value="-1">COM_CONTACTUS_CONFIG_BACKEND_DARKMODE_AUTO</option>
+            <option value="0">COM_CONTACTUS_CONFIG_BACKEND_DARKMODE_NEVER</option>
+            <option value="1">COM_CONTACTUS_CONFIG_BACKEND_DARKMODE_ALWAYS</option>
+        </field>
+    </fieldset>
 
-	<fieldset
-		name="permissions"
-		label="JCONFIG_PERMISSIONS_LABEL"
-		description="JCONFIG_PERMISSIONS_DESC"
-		>
+    <fieldset
+            name="permissions"
+            label="JCONFIG_PERMISSIONS_LABEL"
+            description="JCONFIG_PERMISSIONS_DESC"
+    >
 
-		<field
-			name="rules"
-			type="rules"
-			label="JCONFIG_PERMISSIONS_LABEL"
-			class="inputbox"
-			filter="rules"
-			component="com_contactus"
-			section="component" />
-	</fieldset>	
+        <field
+                name="rules"
+                type="rules"
+                label="JCONFIG_PERMISSIONS_LABEL"
+                class="inputbox"
+                filter="rules"
+                component="com_contactus"
+                section="component"/>
+    </fieldset>
 </config>
