@@ -1,0 +1,10 @@
+<?php
+/**
+ * @package    contactus
+ * @copyright  Copyright (c)2013-2021 Nicholas K. Dionysopoulos / Akeeba Ltd
+ * @license    GNU General Public License version 3 or later
+ */
+
+defined('_JEXEC') || die();
+
+require_once JPATH_LIBRARIES . '/fof40/Html/Fields/fancyradio.php';
