@@ -3,6 +3,7 @@ Contact Us 3.0.0
 ================================================================================
 + Rewritten with FOF 4
 + Renamed ViewTemplates to tmpl (Joomla 4 convention, with fallback code for Joomla 3)
++ Yes/No options in the component and plugin options now work correctly under Joomla 4.0 beta 7 and later
 
 Contact Us 2.1.2
 ================================================================================
